IGNITE-843 Minor UI changes after review.

--- a/modules/control-center-web/src/main/js/public/stylesheets/style.scss
+++ b/modules/control-center-web/src/main/js/public/stylesheets/style.scss
@@ -20,6 +20,7 @@ $input-height: 28px;
 $ignite-red: #ec1c24;
 $ignite-block-callout-background: #f3f8f3;
 $ignite-block-callout: #50af51;
+$ignite-block-callout-header-left: #248fb2;
 
 hr {
     margin: 20px 0;
@@ -775,6 +776,35 @@ button .caret, .btn .caret {
     }
 }
 
+.zzz {
+    color: $ignite-red;
+    font-weight: bold;
+}
+
+.theme-line table.metadata {
+    th {
+        text-align: center;
+        padding: 3px 5px 3px 5px;
+    }
+
+    td {
+        label {
+            cursor: pointer;
+        }
+
+        input[type=checkbox] {
+            margin: 0 3px 3px 0;
+            vertical-align: middle;
+            cursor: pointer;
+        }
+
+        padding: 3px 10px 3px 5px;
+    }
+
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
 .theme-line table.admin {
     tr:hover {
         cursor: default;
@@ -949,6 +979,20 @@ label {
     cursor: pointer;
 }
 
+.fa-chevron-circle-down {
+    color: $ignite-red;
+    cursor: pointer;
+    margin-right: 5px;
+    font-size: 16px;
+}
+
+.fa-chevron-circle-up {
+    color: $ignite-red;
+    cursor: pointer;
+    margin-right: 5px;
+    font-size: 16px;
+}
+
 label.required:after {
     color: $ignite-red;
     content: ' *';
@@ -1057,39 +1101,6 @@ input.ng-dirty.ng-invalid, button.ng-dirty.ng-invalid {
     border-radius: 6px;
 }
 
-.theme-line table.links-edit-small-padding {
-    @extend table.links;
-
-    label {
-        line-height: $input-height;
-        color: #666;
-    }
-
-    a {
-        line-height: $input-height;
-    }
-
-    input[type="checkbox"] {
-        line-height: 20px;
-        margin-right: 5px;
-    }
-
-    .checkbox label {
-        line-height: 20px;
-        vertical-align: middle;
-    }
-
-    th {
-        text-align: center;
-    }
-
-    td {
-        padding-left: 10px;
-    }
-
-    margin-top: 10px;
-}
-
 .nav-tabs > li > a {
     padding: 5px 5px;
 }
@@ -1174,7 +1185,6 @@ a {
 
     i {
         padding: 10px 5px 0 10px;
-        color: $ignite-block-callout;
     }
 
     ul {
@@ -1189,12 +1199,20 @@ a {
 
     label {
         font-weight: bold;
-        color: $ignite-block-callout;
     }
+}
+
+.block-callout-header-left {
+    color: $ignite-block-callout-header-left;
+}
+
+.block-callout-header-right {
+    color: $ignite-block-callout;
 }
 
 .block-callout-border {
     border-left: 5px solid;
+    border-right: 5px solid;
     border-color: $ignite-block-callout;
 }
 
