--- a/modules/control-center-web/src/main/js/views/configuration/metadata.jade
+++ b/modules/control-center-web/src/main/js/views/configuration/metadata.jade
@@ -64,7 +64,7 @@ block content
                             .settings-row(ng-repeat='field in metadataDb')
                                 +form-row
                         div(ng-hide='data.tables.length == 0')
-                            table.table-bordered.table-condensed.links-edit-small-padding.col-sm-12(st-table='data.tables')
+                            table.table-bordered.table-striped.metadata.col-sm-12(st-table='data.tables')
                                 thead
                                     tr
                                         th.col-sm-3 Schema/Table
@@ -73,49 +73,45 @@ block content
                                 tbody
                                     tr(ng-repeat='row in data.tables')
                                         td(colspan='{{row.tableName ? 1 : 3}}')
-                                            div.checkbox(ng-if='!row.tableName')
+                                            div(ng-if='!row.tableName')
                                                 label(ng-click='selectSchema($index)')
                                                     input(type='checkbox' ng-checked='row.use')
                                                     | {{row.schemaName}}
-                                            div.checkbox(ng-if='row.tableName')
-                                                label(style='padding-left: 30px' ng-click='selectTable($index)')
+                                            div(ng-if='row.tableName')
+                                                label(ng-class='{zzz: $index == 1}' style='padding-left: 10px' ng-click='selectTable($index)')
                                                     input(type='checkbox' ng-checked = 'row.use')
                                                     | {{row.tableName}}
                                         td(ng-if='row.tableName')
-                                            a(ng-show='data.curTableIdx != $index' ng-click='selectTable($index)') {{row.keyClass}}
-                                            input.form-control(type='text' ng-show='data.curTableIdx == $index' ng-model='data.curKeyClass' placeholder='Key class full name')
+                                            a(ng-click='selectTable($index)') {{row.keyClass}}
                                         td(ng-if='row.tableName')
-                                            a(ng-show='data.curTableIdx != $index' ng-click='selectTable($index)') {{row.valueClass}}
-                                            input.form-control(type='text' ng-show='data.curTableIdx == $index' ng-model='data.curValueClass' placeholder='Value class full name')
-                        //div(ng-hide='data.curTableIdx < 0')
-                        //    table.table-bordered.table-condensed.links-edit-small-padding.col-sm-12(st-table='data.tables[data.curTableIdx].fields')
-                        //        thead
-                        //            tr
-                        //                th(style='width:45px') Use
-                        //                th(style='width:45px') Key
-                        //                th(style='width:45px') Ak
-                        //                th DB Name
-                        //                th DB Type
-                        //                th Java Name
-                        //                th Java Type
-                        //        tbody
-                        //            tr(ng-repeat='row in data.tables[data.curTableIdx].fields')
-                        //                td
-                        //                    +dbcheck('row.use')
-                        //                td
-                        //                    +dbcheck('row.key')
-                        //                td
-                        //                    +dbcheck('row.ak')
-                        //                td
-                        //                    label {{row.databaseName}}
-                        //                td
-                        //                    label {{row.databaseType}}
-                        //                td
-                        //                    a(ng-show='data.curFieldIdx != $index' ng-click='selectField($index)') {{row.javaName}}
-                        //                    input.form-control(type='text' ng-show='data.curFieldIdx == $index' ng-model='data.curJavaName' placeholder='Field Java name')
-                        //                td
-                        //                    a(ng-show='data.curFieldIdx != $index' ng-click='selectField($index)') {{row.javaType}}
-                        //                    input.form-control(type='text' ng-show='data.curFieldIdx == $index' ng-model='data.curJavaType' placeholder='Field Java type')
+                                            a(ng-click='selectTable($index)') {{row.valueClass}}
+                        div
+                            table.table-bordered.table-striped.metadata.col-sm-12(st-table='fieldz')
+                                thead
+                                    tr
+                                        th(style='width:45px') Use
+                                        th(style='width:45px') Key
+                                        th(style='width:45px') Affinity Key
+                                        th DB Name
+                                        th DB Type
+                                        th Java Name
+                                        th Java Type
+                                tbody
+                                    tr(ng-repeat='row in fieldz')
+                                        td
+                                            input(type='checkbox')
+                                        td
+                                            input(type='checkbox')
+                                        td
+                                            input(type='checkbox')
+                                        td
+                                            label {{row.databaseName}}
+                                        td
+                                            label {{row.databaseType}}
+                                        td
+                                            label {{row.javaName}}
+                                        td
+                                            label {{row.javaType}}
                         button.btn.btn-primary(ng-disabled='dbForm.$invalid' ng-click='saveItem()') Save
                         button.btn.btn-primary.btn-second(ng-show='backupItem._id' ng-click='removeItem()') Remove
                         button.btn.btn-primary.btn-second(ng-click='reloadMetadata()') Reload
