--- a/modules/control-center-web/src/main/js/views/includes/controls.jade
+++ b/modules/control-center-web/src/main/js/views/includes/controls.jade
@@ -17,12 +17,12 @@
 mixin block-callout(titleWorkflow, contentWorkflow, whatsNextWorkflow, whatsNextContent)
     .block-callout-parent.block-callout-border.margin-bottom-dflt
         .block-callout
-            i.fa.fa-check-square
-            label #{titleWorkflow}
+            i.fa.fa-check-square.block-callout-header-left
+            label.block-callout-header-left #{titleWorkflow}
             p(ng-bind-html=contentWorkflow)
         .block-callout
-            i.fa.fa-check-square
-            label #{whatsNextWorkflow}
+            i.fa.fa-check-square.block-callout-header-right
+            label.block-callout-header-right #{whatsNextWorkflow}
             p(ng-bind-html=whatsNextContent)
 
 
