--- a/modules/control-center-web/src/main/js/views/configuration/metadata.jade
+++ b/modules/control-center-web/src/main/js/views/configuration/metadata.jade
@@ -41,11 +41,11 @@ block content
             button.btn.btn-default(ng-model='template' data-template='/select' data-placeholder='Choose metadata type' bs-options='item.value as item.label for item in templates' bs-select)
             i.tiplabel.fa.fa-question-circle(bs-tooltip data-title='{{joinTip(templateTip)}}' type='button')
         hr
-        .panel-group(bs-collapse ng-model='panels.activePanel' data-allow-multiple='false')
+        .panel-group(bs-collapse ng-model='panels.activePanel' data-allow-multiple='true')
             .panel.panel-default(ng-show='selectedItem || backupItem')
                 .panel-heading
                     h3
-                        a(bs-collapse-toggle) Manual
+                        a(bs-collapse-toggle) Configure metadata
                 .panel-collapse(role='tabpanel' bs-collapse-target)
                     .panel-body
                         form.form-horizontal(name='manualForm' ng-if='backupItem' novalidate)
@@ -63,55 +63,12 @@ block content
                         form.form-horizontal(name='dbForm' novalidate)
                             .settings-row(ng-repeat='field in metadataDb')
                                 +form-row
-                        div(ng-hide='data.tables.length == 0')
-                            table.table-bordered.table-striped.metadata.col-sm-12(st-table='data.tables')
-                                thead
-                                    tr
-                                        th.col-sm-3 Schema/Table
-                                        th Key class
-                                        th Value class
+                        div(ng-hide='tables.length == 0')
+                            table.links(st-table='tables')
                                 tbody
-                                    tr(ng-repeat='row in data.tables')
-                                        td(colspan='{{row.tableName ? 1 : 3}}')
-                                            div(ng-if='!row.tableName')
-                                                label(ng-click='selectSchema($index)')
-                                                    input(type='checkbox' ng-checked='row.use')
-                                                    | {{row.schemaName}}
-                                            div(ng-if='row.tableName')
-                                                label(ng-class='{zzz: $index == 1}' style='padding-left: 10px' ng-click='selectTable($index)')
-                                                    input(type='checkbox' ng-checked = 'row.use')
-                                                    | {{row.tableName}}
-                                        td(ng-if='row.tableName')
-                                            a(ng-click='selectTable($index)') {{row.keyClass}}
-                                        td(ng-if='row.tableName')
-                                            a(ng-click='selectTable($index)') {{row.valueClass}}
-                        div
-                            table.table-bordered.table-striped.metadata.col-sm-12(st-table='fieldz')
-                                thead
-                                    tr
-                                        th(style='width:45px') Use
-                                        th(style='width:45px') Key
-                                        th(style='width:45px') Affinity Key
-                                        th DB Name
-                                        th DB Type
-                                        th Java Name
-                                        th Java Type
-                                tbody
-                                    tr(ng-repeat='row in fieldz')
-                                        td
-                                            input(type='checkbox')
-                                        td
-                                            input(type='checkbox')
-                                        td
-                                            input(type='checkbox')
-                                        td
-                                            label {{row.databaseName}}
-                                        td
-                                            label {{row.databaseType}}
-                                        td
-                                            label {{row.javaName}}
-                                        td
-                                            label {{row.javaType}}
+                                    tr(ng-repeat='row in tables')
+                                        td.col-sm-6
+                                            a {{$index + 1}}) {{::row.schemaName}} / {{::row.tableName}}
                         button.btn.btn-primary(ng-disabled='dbForm.$invalid' ng-click='saveItem()') Save
                         button.btn.btn-primary.btn-second(ng-show='backupItem._id' ng-click='removeItem()') Remove
                         button.btn.btn-primary.btn-second(ng-click='reloadMetadata()') Reload
