--- a/modules/control-center-web/src/main/js/views/sql/sql.jade
+++ b/modules/control-center-web/src/main/js/views/sql/sql.jade
@@ -30,9 +30,8 @@ block container
                     hr
                 .docs-body(ng-controller='sqlController' ng-init='noteId = #{JSON.stringify(noteId)};')
                     div(ng-if='!caches')
-                        .block-callout-parent.block-callout-border.margin-bottom-dflt
-                            .block-callout
-                                p(ng-bind-html='joinTip(missingClientTip)')
+                        .block-callout-right.margin-bottom-dflt(style='width: 100%')
+                            p(ng-bind-html='joinTip(missingClientTip)')
                     div(ng-if='caches')
                         .block-callout-parent.block-callout-border.margin-bottom-dflt
                             .block-callout
