IGNITE-843 Use select instead of dropdown (select could be focused and respond to enter/esc).

--- a/modules/control-center-web/src/main/js/public/stylesheets/style.scss
+++ b/modules/control-center-web/src/main/js/public/stylesheets/style.scss
@@ -688,6 +688,10 @@ button .caret, .btn .caret {
     }
 }
 
+.line-control {
+    width: auto;
+}
+
 .theme-line .panel-heading {
     padding: 10px 10px;
     margin: 0;
