--- a/modules/control-center-web/src/main/js/views/includes/controls.jade
+++ b/modules/control-center-web/src/main/js/views/includes/controls.jade
@@ -209,10 +209,10 @@ mixin table-group-item-edit(fieldName, className, direction, index)
             select.form-control(id=focusIdNext2 ng-model=direction ng-options='item.value as item.label for item in {{sortDirections}}' on-enter=btnVisibleAndSave on-escape='tableReset()')
 
 mixin form-row
-    +form-row-custom(['col-sm-2'], ['col-sm-4'])
+    +form-row-custom(['col-sm-2'], ['col-sm-4'], 'backupItem')
 
-mixin form-row-custom(lblClasses, fieldClasses)
-    - var fieldMdl = 'getModel(backupItem, field)[field.model]';
+mixin form-row-custom(lblClasses, fieldClasses, dataSource)
+    - var fieldMdl = 'getModel('+ dataSource + ', field)[field.model]';
     - var fieldCommon = {'ng-model': fieldMdl, 'ng-required': 'field.required || required(field)'};
     - var fieldRequiredClass = '{true: "required"}[field.required || required(field)]'
     - var fieldHide = '{{field.hide}}'
