IGNITE-843 Rename user_info to reset_info.

--- a/modules/control-center-web/src/main/js/views/reset.jade
+++ b/modules/control-center-web/src/main/js/views/reset.jade
@@ -23,16 +23,16 @@ block container
         .text-center(ng-if='error')
             p {{::error}}
         div(ng-controller='auth' ng-if='token && !error')
-            form.form-horizontal(name='resetForm' ng-init='user_info.token = token')
+            form.form-horizontal(name='resetForm' ng-init='reset_info.token = token')
                 .settings-row
                     label.col-sm-1 Token:
                     label {{::token}}
                 .settings-row
                     label.col-sm-1.required Password:
                     .col-sm-3
-                        input#user_password.form-control(enter-focus-next enter-focus-next-id='user_confirm' type='password' ng-model='user_info.password' placeholder='New password' required)
+                        input#user_password.form-control(enter-focus-next enter-focus-next-id='user_confirm' type='password' ng-model='reset_info.password' placeholder='New password' required)
                 .settings-row
                     label.col-sm-1.required Confirm:
                     .col-sm-3
-                        input#user_confirm.form-control(type='password' ng-model='user_info.confirm' match='user_info.password' placeholder='Confirm new password' required on-enter='resetForm.$valid && resetPassword(user_info)')
-            button.btn.btn-primary(ng-disabled='resetForm.$invalid' ng-click='resetPassword(user_info)') Reset Password
+                        input#user_confirm.form-control(type='password' ng-model='user_info.confirm' match='reset_info.password' placeholder='Confirm new password' required on-enter='resetForm.$valid && resetPassword(user_info)')
+            button.btn.btn-primary(ng-disabled='resetForm.$invalid' ng-click='resetPassword(reset_info)') Reset Password
