--- a/modules/control-center-web/src/main/js/views/configuration/caches.jade
+++ b/modules/control-center-web/src/main/js/views/configuration/caches.jade
@@ -33,7 +33,7 @@ block content
                 table.links(st-table='caches')
                     tbody
                         tr(ng-repeat='row in caches track by row._id')
-                            td.col-sm-6(ng-class='{active: row._id == selectedItem._id}')
+                            td(ng-class='{active: row._id == selectedItem._id}')
                                 a(event-focus='click' event-focus-id='defaultFocusId' ng-click='selectItem(row)') {{$index + 1}}) {{row.name}}, {{row.mode | displayValue:modes:'Cache mode not set'}}, {{row.atomicityMode | displayValue:atomicities:'Cache atomicity not set'}}
         .padding-top-dflt
             button.btn.btn-primary(event-focus='click' event-focus-id='defaultFocusId' ng-click='createItem()') Add cache
@@ -47,7 +47,7 @@ block content
                     .panel-collapse(bs-collapse-target)
                         .panel-body
                             .settings-row(ng-repeat='field in general')
-                                +form-row(['col-sm-3'], ['col-sm-3'])
+                                +form-row(['col-sm-3'], ['col-sm-3'], 'backupItem')
             .panel-group(bs-collapse data-allow-multiple='true')
                 div(bs-collapse data-start-collapsed='true')
                     .panel-title(ng-show='expanded')
@@ -65,7 +65,7 @@ block content
                                 .panel-collapse(bs-collapse-target)
                                     .panel-body
                                         .settings-row(ng-repeat='field in group.fields')
-                                            +form-row
+                                            +form-row('backupItem')
                     .panel-title
                         h3
                             i.fa.fa-chevron-circle-up(ng-show='expanded' ng-click='expanded = !expanded')
